[package]
name = "secondsight"
authors = ["bitten2up <seant9140@gmail.com"]
description = "a simple 3y3 text viewer/encoder based on https://synthetic.garden/3y3.htm"
repository = "https://github.com/litten2up/secondsight/"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
